--- a/index.html
+++ b/index.html
@@ -7,10 +7,9 @@
     <title>Document</title>
 </head>
 <body>
+    <font face="tahoma">
+    <center><h3>Universidad de Córdoba</h3><hr><p>Unicordoba Estereo</p></center>
 <iframe name="contenedorPlayer" class="cuadroBordeado" allow="autoplay" width="100%" height="78px" marginwidth=0 marginheight=0 hspace=0 vspace=0 frameborder=0 scrolling=no  src="https://cp.usastreams.com/pr2g/APPlayerRadioHTML5.aspx?stream=http://unicordobaestereo.unicordoba.edu.co:80/unicor&fondo=05&formato=mpeg&color=14&titulo=2&autoStart=1&vol=5&tipo=14&nombre=Se%c3%b1al+Online"></iframe>
-<br><hr><br>
-<audio id="player" controls>
-    <source src=" 	http://unicordobaestereo.unicordoba.edu.co:80/unicor" type="audio/mp3">
-</audio>
+</font>
 </body>
 </html>
