--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <hr>
 <br>
  <small>CINTIA - 2021 - Desarrollado por Ing. Juan Muskus²</small>      
-        <small>
+        <hr><br><small>
         <a href="mailto:jmuskus@correo.unicordoba.edu.co?Subject=Emisora Unicordoba Estereo">Contactar por correo</a>
         </small>
 </font>
