--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <iframe name="contenedorPlayer" class="cuadroBordeado" allow="autoplay" width="100%" height="78px" marginwidth=0 marginheight=0 hspace=0 vspace=0 frameborder=0 scrolling=no  src="https://cp.usastreams.com/pr2g/APPlayerRadioHTML5.aspx?stream=http://unicordobaestereo.unicordoba.edu.co:80/unicor&fondo=05&formato=mpeg&color=14&titulo=2&autoStart=1&vol=5&tipo=14&nombre=Se%c3%b1al+Online"></iframe>
 <hr>
 <br>
- <small style="align-text:center;">CINTIA - 2021 - Desarrollado por Ing. Juan Muskus² / jmuskus@correo.unicordoba.edu.co</small>      
+ <small style="text-align: center;">CINTIA - 2021 - Desarrollado por Ing. Juan Muskus² / jmuskus@correo.unicordoba.edu.co</small>      
         <hr>
 </font>
 </body>
