--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
     <div style="height: 500px;"><div id="rt-00c6e5a944df27f4c9b435ff4ea77736"></div> <script src="https://rumbletalk.com/client/?LQhtO3tc"></script></div>
     <br>
-    <small style="text-align: center;">CINTIA - 2021 - Desarrollado por Ing. Juan Muskus² / jmuskus@correo.unicordoba.edu.co</small>      
+    <small style="text-align: center;">CINTIA - 2021 - Desarrollado por Ing. Juan Muskus² M. / jmuskus@correo.unicordoba.edu.co</small>      
            <hr>
    </body>
 </html>
