--- a/index.html
+++ b/index.html
@@ -20,7 +20,26 @@
         <p>Unicórdoba Estéreo</p>
     </center>
     <div style="padding:20px; align-content: center;">
-        <iframe name="contenedorPlayer" class="cuadroBordeado" allow="autoplay" width="100%" height="80px" marginwidth=0 marginheight=0 hspace=0 vspace=0 frameborder=0 scrolling=no src="http://cp.usastreams.com/pr2g/APPlayerRadioHTML5.aspx?stream=http://unicordobaestereo.unicordoba.edu.co:80/unicor&fondo=05&formato=mp3&color=14&titulo=2&autoStart=1&vol=5&tipo=200&nombre=Unic%c3%b3rdoba+Estereo&server=http://unicordobaestereo.unicordoba.edu.co:80/status.xslCHUMILLASmount=/unicor"></iframe>
+    <script type="text/javascript" src="https://hosted.muses.org/mrp.js"></script>
+    <script type="text/javascript">
+        MRP.insert({
+    'url':'http://unicordobaestereo.unicordoba.edu.co:80/unicor',
+    'lang':'es',
+    'codec':'mp3',
+    'volume':50,
+    'autoplay':true,
+    'forceHTML5':true,
+    'jsevents':true,
+    'buffering':0,
+    'title':'Unicórdoba Estéreo',
+    'welcome':'Señal cultural',
+    'wmode':'transparent',
+    'skin':'faredirfare',
+    'width':269,
+    'height':52
+    });
+    </script>
+
         <div style="height: 500px;">
             <div id="rt-00c6e5a944df27f4c9b435ff4ea77736"></div>
             <script src="https://rumbletalk.com/client/?LQhtO3tc"></script>
